# pokenux

./: .gitignore  PKGBUILD  README.md  pyproject.toml
scripts/: prepare_data.py
src/pokenux/: main.py
src/pokenux/jsons/: pokemon.json  tcg_fr.json
src/pokenux/models/: pokemon.py  pokemon_evolutions.py  pokemon_mega_evolution.py  pokemon_name.py  pokemon_sprite.py  pokemon_stat.py  pokemon_talent.py
src/pokenux/models/pokemon/: pokemon.py  pokemon_evolution.py  pokemon_evolutions.py  pokemon_mega_evolution.py  pokemon_resistance.py  pokemon_sex.py  pokemon_type.py
src/pokenux/models/tcg/: card.py  serie.py  set.py
src/pokenux/services/: jsons.py  pokedex.py  tcg_library.py  tyradex.py  utils.py
src/pokenux/services/api/: tcgdex.py  tyradex.py
src/pokenux/services/games/: anagram.py  evolution.py
