[project]
name = "pokenux"
version = "0.0.1"
description = "Pokénux is a modern Textual TUI to explore Pokémon and cards, play quizzes, and open boosters from your terminal."
authors = [
    {name = "FrancoisBasset",email = "mrfrancoisbasset@gmail.com"}
]
license = "MIT"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[project.scripts]
pokenux = 'pokenux.main:main'
