[project]
name = "pokenux"
version = "0.0.1"
description = "Pokénux is a modern Textual TUI to explore Pokémon and cards, play quizzes, and open boosters from your terminal."
authors = [
    { name = "FrancoisBasset", email = "mrfrancoisbasset@gmail.com" },
]
license = "MIT"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "requests>=2.34.2,<3.0.0",
]

[project.scripts]
pokenux = "pokenux.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "basedpyright>=1.39.9",
    "ruff>=0.15.20",
]
